--- a/src/components/ListProducts/ListProducts.css
+++ b/src/components/ListProducts/ListProducts.css
@@ -7,6 +7,20 @@
   padding: 5px;
   border: 1px solid blue;
   max-width: 200px;
+  font-family: 'Archivo', sans-serif;
+  text-align: center;
+}
+
+.Product h3 {
+  color: darkred;
+}
+
+.price {
+  font-family: 'Archivo', sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  color: green;
+  cursor: pointer;
 }
 
 .listProduct img {
